Update print statement from 'Hello' to 'Goodbye'

--- a/web.html
+++ b/web.html
@@ -441,7 +441,7 @@
             box-shadow: 0 8px 25px rgba(59, 130, 246, 0.4);
         }
 
-        /* Image Manager (Hidden by default) */
+        /* Image Manager */
         .image-manager {
             display: none;
             position: fixed;
